# zk-auth-rust

./: .gitignore  Cargo.toml  README.md  bench_native.sh  package.json  pnpm-lock.yaml  pot12_0001.ptau  zk-bench.js
bench-mark/: bench.js
bench_logs/2025-07-15_060651/: k6.json
benches/: api_benches.rs
circuits/: secret-proof.circom
circuits/secret-proof/: secret-proof.sym  secret_final.zkey
circuits/secret-proof/secret-proof_js/: secret-proof.wasm
src/: lib.rs  main.rs
