[package]
name    = "zk-auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# ─── Web ──────────────────────────────────────────────────────────────
actix-web   = "4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ─── Crypto stack ─────────────────────────────────────────────────────
ark-bn254   = "0.5"
ark-ff      = "0.5"
ark-circom  = "0.5"
ark-groth16 = "0.5"
ark-snark   = "0.5"

light-poseidon = "0.3"       # BN254 Poseidon params
sha3           = "0.10"
rand           = { version = "0.8", features = ["std"] }

# ─── Utils ────────────────────────────────────────────────────────────
hex         = "0.4"
num-bigint  = "0.4"
once_cell   = "1.19"
tokio = "1.46.1"
num_cpus = "1.17.0"
