[package]
name    = "zk-auth-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Web ---
actix-web   = "4.8.0"
serde       = { version = "1.0.203", features = ["derive"] }
serde_json  = "1.0.120"
tokio       = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

# --- Crypto Stack ---
ark-bn254   = "0.5.0"
ark-ff      = "0.5.0"
ark-circom  = "0.5.0"
ark-groth16 = "0.5.0"
ark-snark   = "0.5.0"
light-poseidon = "0.3.0"
sha3        = "0.10.8"
rand        = "0.8.5"

# --- Utils ---
hex         = "0.4.3"
num-bigint  = "0.4.5"
once_cell   = "1.19.0"
num_cpus    = "1.16.0"

reqwest = { version = "0.12", features = ["json"] }
gnark-bn254-verifier = "1.0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "api_benches"
harness = false